# LucasScript

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README  README.md  a.py  app.lcs  app.lex  apps.lcs  demo.lcs  demo.lex  out  test.cc
languageextension/: README.md  language-configuration.json  lexter-syntax-0.0.1.vsix  lscript-syntax-0.0.1.vsix  package.json
languageextension/syntaxes/: lexter.tmLanguage.json  lscript.tmLanguage.json
src/: start.cc
src/builtin/functions/: all.h  input.cc  log.cc  print.cc  sleep.cc  string.cc  sys_run.cc  t_bool.cc  t_decimal.cc  t_int.cc  toint.cc  tostring.cc  typeof.cc
src/parse/: lexer.cc  lexer.h  parseAdditive.cc  parseAssignment.cc  parseEquality.cc  parseExpression.cc  parseLogical.cc  parseMultiplicative.cc  parsePrimary.cc  parseRelational.cc  parseUnary.cc  parser.cc  parser.h
src/utils/: argument.h
src/variable/: class.cc  class.h  function.cc  function.h  variable.cc  variable.h
